# audio_programming

./: .gitignore  README.md
Formative Assignment/: CMakeLists.txt  main_1.cpp  main_2.cpp  main_3.cpp
LearnC++/: quiz-1.1.md
LearnC++/Debugging/: Debugging.slnx  Debugging.vcxproj  main.cpp
LearnC++/HelloWorld/: HelloWorld.slnx  HelloWorld.vcxproj  io.cpp  io.h  main.cpp
Week 1/__MACOSX/: ._ArrayAndLoopChallenges  ._code
Week 1/code/: challenge1_correct_the_errors.cpp  challenge2_adding_machine.cpp
Week 10/week10_audioSamples/: week10_audioSamples.jucer
Week 2/CLion_challenges4/: CMakeLists.txt  MattsAudioHeader.h  main_challenge1.cpp  main_challenge2.cpp  main_challenge3.cpp
Week 2/CLion_challenges4/questions/__MACOSX/: ._oscillator_challenges
Week 2/CLion_challenges4/questions/__MACOSX/oscillator_challenges/: ._challenge1_oscillator.cpp  ._challenge2_correct_the_errors.cpp  ._challenge3_oscillator_types.cpp
Week 2/CLion_challenges4/questions/oscillator_challenges/: challenge1_oscillator.cpp  challenge2_correct_the_errors.cpp  challenge3_oscillator_types.cpp
Week 2/sketch_challenges/: sketch_challenges.cpp  sketch_challenges.vcxproj  sketch_challenges.vcxproj.filters
Week 2/week2_challange3_4/: week2_challange3_4.cpp  week2_challange3_4.vcxproj  (+1 more)
Week 3/: CMakeLists.txt  main_classes_1.cpp  main_classes_2.cpp  main_functions2.cpp  main_functions_1.cpp  main_functions_3.cpp  main_oscillator.cpp
Week 4/: CMakeLists.txt
assignment_3/: assignment_3.jucer
cmakeTrial/: CMakeLists.txt
template/: CMakeLists.txt
useful_headers/: Oscillator.h
(+233 files in other folders)
